src/global.css
@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
@layer theme, base, mui, components, utilities;


body {
    margin: 0 auto;
    height: 100vh;
    background-color: var(--mui-palette-background-default);
}

#root {
    height: 100%;
}

.Mui-focusVisible {
    outline: 2px solid var(--mui-palette-text-primary);
    outline-offset: 4px;
}

label.Mui-focused{
    color: var(--mui-palette-text-primary);
}
.Mui-focused .MuiOutlinedInput-notchedOutline {
    border-color: var(--mui-palette-text-primary);
}

